==> zmor-Yihang/StudyForever/example0/User/bsp/led.c <==
#include "led.h"
#include "DSP2833x_Device.h"
#include "DSP2833x_Examples.h"

void led_init(void)
{
    EALLOW;                              // 禁用保护
    GpioCtrlRegs.GPCMUX1.bit.GPIO68 = 0; // GPIO68 设置为普通GPIO功能
    GpioCtrlRegs.GPCDIR.bit.GPIO68 = 1;  // GPIO68 设置为输出
    GpioCtrlRegs.GPCPUD.bit.GPIO68 = 1;  // GPIO68 上拉电阻禁用
    GpioDataRegs.GPCSET.bit.GPIO68 = 1;  // GPIO68 初始化输出高电平
    EDIS;                                // 使能保护
}

void led_on(void)
{
    GpioDataRegs.GPCCLEAR.bit.GPIO68 = 1; // GPIO68 输出低电平
}

void led_off(void)
{
    GpioDataRegs.GPCSET.bit.GPIO68 = 1; // GPIO68 输出高电平

}

void led_toggle(void)
{
    GpioDataRegs.GPCTOGGLE.bit.GPIO68 = 1; // GPIO68 输出电平取反
}
